# src/routes/stocks.js
@@ -1,5 +1,6 @@
 const Router = require('@koa/router')
-const { Stock, Price } = require('../models')
+const { DateTime } = require('luxon')
+const { Stock, Price, User } = require('../models')
 
 const router = new Router()
 
@@ -21,7 +22,7 @@ router.get('/search', async (ctx) => {
   ctx.body.stocks = res
 })
 
-router.get('/price', async (ctx) => {
+router.get('/:symbol/price', async (ctx) => {
   ctx.body = {}
 
   if (!ctx.state.user) {
@@ -31,8 +32,16 @@ router.get('/price', async (ctx) => {
     return
   }
 
-  const { query } = ctx.request.query
-  const res = await Price.search(query)
+  const { days, weeks, months, years, date } = ctx.request.query
+
+  const duration = {
+    days: days || 5,
+    weeks: weeks || 0,
+    months: months || 0,
+    years: years || 0
+  }
+
+  const res = await Price.get(ctx.params.symbol, { date: date ? DateTime(date) : null, duration })
 
   ctx.body.success = true
   ctx.body.prices = res
@@ -48,11 +57,29 @@ router.get('/gainers', async (ctx) => {
     return
   }
 
-  const symbols = await Stock.topGainers(10)
+  const { count } = ctx.request.query
+
+  const symbols = await Stock.topGainers(count || 10)
   const res = await Stock.find({ symbol: { $in: symbols } })
 
   ctx.body.success = true
   ctx.body.stocks = res
+})
+
+router.post('/:symbol/buy', async (ctx) => {
+  ctx.body = {}
+
+  if (!ctx.state.user) {
+    console.log(ctx.request.headers)
+    ctx.body.success = false
+    ctx.status = 401
+    return
+  }
+
+  const user = User(ctx.state.user)
+  const portfolio = await user.getPortfolio()
+  const stock = await Stock.findOne({ symbol: ctx.params.symbol })
+  await portfolio.buy(stock, 1)
 })
 
 module.exports = router.routes()
